# pac_glm

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
crates/pac-game/: Cargo.toml
crates/pac-game/src/: lib.rs
crates/pac-math/: Cargo.toml
crates/pac-math/src/: bounds.rs  lib.rs  transform.rs
crates/pac-render/: Cargo.toml
crates/pac-render/src/: camera.rs  context.rs  lib.rs
crates/pac-window/: Cargo.toml
crates/pac-window/src/: input.rs  lib.rs  time.rs  window.rs
src/: main.rs
