[package]
name = "pac-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
winit.workspace = true
wgpu.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
pac-math = { path = "../pac-math" }
pac-render = { path = "../pac-render" }
pac-window = { path = "../pac-window" }

[features]
default = []
